Correct line endings, make spacing consistent
Many files did not have a return at the end to allow for proper
cross-platform version control. Some files had 2 spaces, some had 4,
some had tabs, and some had combinations of all three. I've converted
all files to 4 spaces for a more consistent codebase.

--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background: #1f1f1f;
+    background: #1F1F1F;
     color: $text-light-color;
     text-align: center;
     padding: 30px;
@@ -12,7 +12,7 @@ footer {
         h2 {
             color: $brand-color;
         }
-        a{
+        a {
             display: block;
         }
     }
