--- a/src/css/pages/_blog.scss
+++ b/src/css/pages/_blog.scss
@@ -1,10 +1,10 @@
 .container.blog {
 	background: url('/img/bg_pattern_light.png');
-	padding: 0;
+	padding: 0px;
 	.content {
 		width: 1000px;
-		background: #ffffff;
-		margin: 0 auto;
+		background: #FFF;
+		margin: 0px auto;
 		padding: 10px 30px;
 	}
 }
